Fixed offcentering due to zoom/pan. Need to fix zooming/pan while editing.

--- a/style.css
+++ b/style.css
@@ -8,8 +8,6 @@ body {
 }
 
 #edit {
-  height: 50px;
-  width: 100px;
   position: absolute;
   visibility: hidden;
 }
